kustomizations/grapher/polynote/overlays/gke/tune-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: polynote
spec:
  routes:
  - kind: Rule
    match: Host(`grapher.itinerix-project.net`) && PathPrefix(`/polynote/`)
    services:
    - name: polynote
      port: 8192
    middlewares:
    - name: polynote-auth
    - name: polynote-strip-prefix


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gremlinserver-neo4j-bolt
spec:
  routes:
  - kind: Rule
    match: Host(`grapher.itinerix-project.net`)
    services:
    - name: gremlinserver-neo4j
      port: 7687
    middlewares: []
